--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -495,6 +495,8 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"اثر انگشت اضافه شد"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"اکنون می‌توانید از اثر انگشتتان برای باز کردن قفل تلفن یا به‌تأیید رساندن هویتتان (مثلاً وقتی به سیستم برنامه‌ها وارد می‌شوید) استفاده کنید"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"بعداً انجام شود"</string>
+    <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"بردارید و دوباره لمس کنید"</string>
+    <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"یک سمت انگشتتان را روی حسگر قرار دهید و نگه دارید، سپس این کار را با سمت دیگر تکرار کنید"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"از تنظیم اثر انگشت رد می‌شوید؟"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"انتخاب کرده‌اید که از اثر انگشتتان به‌عنوان روشی برای باز کردن قفل تلفن استفاده کنید. اگر اکنون این مرحله را رد کنید، باید بعداً آن را تنظیم کنید. تنظیم فقط یک دقیقه یا همین حدود طول می‌کشد."</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"درصورت گم شدن یا به‌سرقت رفتن رایانه لوحی، پین از آن محافظت می‌کند"</string>
