--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -495,6 +495,10 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"បានបញ្ចូល​ស្នាមម្រាមដៃ​រួចហើយ"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"ឥឡូវនេះ អ្នកអាចប្រើ​ស្នាមម្រាមដៃ​របស់អ្នក ដើម្បីដោះសោ​ទូរសព្ទរបស់អ្នក ឬផ្ទៀងផ្ទាត់ថាជាអ្នកដូចជា នៅពេលអ្នក​ចូលកម្មវិធីជាដើម"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"ធ្វើ​នៅ​ពេលក្រោយ"</string>
+    <!-- no translation found for security_settings_udfps_tip_fingerprint_help (7580784640741217494) -->
+    <skip />
+    <!-- no translation found for security_settings_udfps_side_fingerprint_help (2567232481013195191) -->
+    <skip />
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"រំលងការរៀបចំស្នាមម្រាមដៃឬទេ?"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"អ្នកបានជ្រើសរើសប្រើស្នាមម្រាមដៃរបស់អ្នកជាវិធីមួយក្នុងការដោះសោទូរសព្ទរបស់អ្នក។ ប្រសិនបើអ្នករំលងឥឡូវនេះ អ្នកត្រូវរៀបចំវានៅពេលក្រោយ។ ការរៀបចំចំណាយពេលតែមួយភ្លែតប៉ុណ្ណោះ។"</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"កូដ PIN ការពារថេប្លេត ប្រសិនបើ​បាត់ថេប្លេត ឬត្រូវបានគេលួច"</string>
