--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -495,6 +495,8 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"கைரேகை சேர்க்கப்பட்டது"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"மொபைலை அன்லாக் செய்வதற்கும் நீங்கள்தான் என்பதை உறுதிப்படுத்துவதற்கும் (உதாரணமாக, ஆப்ஸில் உள்நுழைதல்) இனி உங்கள் கைரேகையைப் பயன்படுத்தலாம்"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"பின்னர் செய்"</string>
+    <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"விரலை எடுத்துவிட்டு, மீண்டும் தொடவும்"</string>
+    <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"உங்கள் விரலின் விளிம்புப் பகுதியை சென்சாரின் ஒரு பக்கத்தில் வைத்துப் பிடித்திருந்து, பிறகு மற்றொரு பக்கத்திற்கு மாற்றவும்"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"கைரேகையை அமைக்க வேண்டாமா?"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"கைரேகையை மட்டும் பயன்படுத்தி மொபைலை அன்லாக் செய்யும் முறையைத் தேர்ந்தெடுத்துள்ளீர்கள். இப்போது தவிர்த்தால், இதைப் பின்னர் அமைக்க வேண்டியிருக்கும். இதை அமைக்க ஒரு நிமிடமே ஆகும்."</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"உங்கள் டேப்லெட் தொலைந்துபோனாலோ திருடுபோனாலோ அதிலுள்ள தரவை \'பின்\' பாதுகாக்கும்"</string>
