--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -495,6 +495,8 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"فنگر پرنٹ شامل ہو گیا"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"اب آپ اپنا فون غیر مقفل کرنے یا یہ توثیق کرنے کے لیے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں جیسے جب آپ ایپس میں سائن ان کرتے ہیں"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"اسے بعد میں کریں"</string>
+    <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"اٹھائیں، پھر دوبارہ ٹچ کریں"</string>
+    <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"اپنے فنگر پرنٹ کے حصے کو سینسر پر رکھیں اور دبائے رکھیں پھر، دوسرے حصے پر سوئچ کریں"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"فنگر پرنٹ سیٹ اپ نظر انداز کریں؟"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"آپ نے اپنا فون غیر مقفل کرنے کیلئے ایک طریقہ اپنے فنگر پرنٹ کا استعمال منتخب کیا ہے۔ اگر آپ اب نظر انداز کرتے ہیں تو آپ کو اسے بعد میں سیٹ اپ کرنا ہوگا۔ سیٹ اپ میں کم و بیش ایک منٹ کا وقت لگتا ہے۔"</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"‏PIN ٹیبلیٹ کے گم یا چوری ہونے پر اس کی حفاظت کرتا ہے"</string>
