Implement dream complication settings.
This component allows the user to select dream complications to
enable/disable.

Bug: 215703483
Test: locally on device
Change-Id: I03dd9d67b4aeb3f41885b42391d97c18bd7465f6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13831,6 +13831,13 @@
     <string name="tare_dialog_confirm_button_title">Confirm</string>
     <!-- Button to preview the selected screensaver in settings [CHAR LIMIT=40] -->
     <string name="dream_preview_button_title">Preview screensaver</string>
+    <!-- The title of the category to show for the screensaver selector in settings [CHAR LIMIT=none] -->
+    <string name="dream_picker_category">Choose an image</string>
+    <!-- The title of the category to show for the screensaver overlay selector in settings [CHAR LIMIT=none] -->
+    <string name="dream_complications_picker_category">Choose more options</string>
+    <!-- The title of the category to show for the screensaver miscellaneous settings [CHAR LIMIT=none] -->
+    <string name="dream_more_settings_category">More settings</string>
+
     <!-- Button to customize the screensaver [CHAR LIMIT=20] -->
     <string name="customize_button_title">Customize</string>
 
