Made following changes to Settings:
- Moved the Voice Input setting from Digital assistant app to Languages & input.
- Bundled Voice Input and Text-to-speech settings together under Speech
  category.

Bug: 218609449

Test: refactoring CL. Existing unit tests still pass.
Change-Id: I3107a410ed35685f5f1081cbe448b105b5c79c24

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4983,6 +4983,9 @@
     <!-- Summary text for keyboards when no layout has been selected. [CHAR LIMIT=35] -->
     <string name="default_keyboard_layout">Default</string>
 
+    <!-- Title for the 'Speech' preference category. [CHAR LIMIT=45] -->
+    <string name="speech_category_title">Speech</string>
+
     <!-- On Languages & input settings screen, setting summary.  Setting for mouse pointer speed. [CHAR LIMIT=35] -->
     <string name="pointer_speed">Pointer speed</string>
 
