--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7543,6 +7543,9 @@
     <string name="user_lockscreen_settings">Lock screen settings</string>
     <!-- User settings item to allow creating new users from locks screen [CHAR LIMIT=50] -->
     <string name="user_add_on_lockscreen_menu">Add users from lock screen</string>
+    <!-- User settings item to allow the system to automatically switch back to the admin user when
+         the device is docked. [CHAR LIMIT=50] -->
+    <string name="switch_to_user_zero_when_docked">Switch to admin user when docked</string>
 
     <!-- User (self) removal confirmation title [CHAR LIMIT=30] -->
     <string name="user_confirm_remove_self_title">Delete yourself?</string>
